# restgw-iac

./: Cargo.toml  Dockerfile  README.md  configuration.json  credentials.json  job.yaml  service_account.yaml
.circleci/: config.yml
src/: api_management.rs  fasit.rs  http_helpers.rs  main.rs
