[package]
name = "restgw-iac"
version = "0.1.0"
authors = ["Martin Solheim <martin.solheim@nav.no>", "Kevin Sillerud <kevin.sillerud@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.6"
env_logger = "0.6.1"

[dependencies.reqwest]
version="0.9"
features=["rustls-tls"]
default-features=false
